# ui_legal_rag

./: .gitignore  LOGGING.md  README.md  app.py  files_per_client_summary-new.csv  files_per_client_summary.csv  log_analyzer.py  pyproject.toml  run.sh  start.bat  test_rag.py  unique_values_filter.json
.github/instructions/: instructions.md
.streamlit/: config.toml  secrets.toml
backend/: config.py  fastapi_client.py  legal_rag.py  models.py  rag_client.py
cache/: README.md
evals/: evaluation.ipynb  llm_metrics.json  qa_list.json  qa_list_results.json  rag_cot_metrics.json  rag_metrics.json  thought_process.ipynb
logs/: LOGGING.md
pages/: document_viewer.py  legal_search.py
utils/: app_info.py  document_metadata.py  interactive_table.py  session_state.py  ui_components.py  usage_logger.py
views/: analytics.py  cache_management.py  document_viewer.py  evaluation.py  legal_search.py  login.py  server_status.py  user_feedback.py
