[project]
name = "ui-legal-rag"
version = "0.1.0"
description = "Legal Document Search UI for RAG Backend Integration"
authors = [{name = "Legal Team", email = "legal@company.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "boto3>=1.39.8",
    "transformers>=4.30.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "nltk>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "utils", "pages"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv.workspace]
members = [
    "evals",
]
